# industriage

./: .gitignore  README.md  notes.txt  pyproject.toml  report.html  run_workflow.py  run_workflow.sh
archives/: transformations.py
src/: display.py  prepare_data.ipynb  scratch.ipynb
src/base/: __init__.py  evaluator.py  graph_builder.py  state.py  workflow.py
src/workflows/primary/agents/: expert_note_parser_agent.json
test/: agent_tester.py  start_dashboard.py
test/templates/: agent_dashboard.html
workflows/primary/: graph.json  state.py  workflow.py
workflows/primary/agents/: industrial_maintenance_agent.json
workflows/secondary/: graph.json  state.py  workflow.py
workflows/secondary/agents/: closing_comment_agent.json
